Bug 1903174 - Add debug logging for AutoCompaction checking. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D216884

--HG--
extra : amend_source : c7c0249ed763dc6c9dcc2cca2eedea4af2a5d8b8